# simpleFramework

./: .gitignore  README.md  doxyfile  meson.build
include/: event.h  log.h  point.h  rect.h  renderer.h  video.h  widget.h  window.h
src/: event.cpp  log.cpp  point.cpp  rect.cpp  renderer.cpp  video.cpp  window.cpp
test/: meson.build  test_log.cpp  test_renderer.cpp  test_video.cpp  test_window.cpp
