executable ('test_log','test_log.cpp',link_with : [ simpleFramework ] )
#executable ('test_point', 'test_point.cpp', link_with: libGUI )
#executable ('test_rect', 'test_rect.cpp', link_with: libGUI )
executable ('test_video', 'test_video.cpp', dependencies: sdl2_dep, link_with: simpleFramework )
executable ('test_renderer', 'test_renderer.cpp', dependencies: sdl2_dep, link_with: simpleFramework )
executable ('test_window', 'test_window.cpp', dependencies: sdl2_dep, link_with: simpleFramework )
#executable ('test_commonButton', 'test_commonButton.cpp', dependencies: sdl2_dep, link_with: libGUI )
#executable ('testapp', 'testapp.cpp', dependencies: sdl2_dep, link_with: libGUI )
#link_args : '-Wl,--linker-option'
